--- a/notebooks/scraped_data.ipynb
+++ b/notebooks/scraped_data.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing modules from scripts \n",
+    "# importing module from scripts folder\n",
     "from scripts.data_cleaning_transformation import *"
    ]
   },
