--- a/notebooks/yolo_object_detection.ipynb
+++ b/notebooks/yolo_object_detection.ipynb
@@ -80,9 +80,6 @@
       "Using cache found in C:\\Users\\JO/.cache\\torch\\hub\\ultralytics_yolov5_master\n",
       "YOLOv5  2024-10-13 Python-3.12.1 torch-2.4.1+cpu CPU\n",
       "\n",
-      "Downloading https://github.com/ultralytics/yolov5/releases/download/v7.0/yolov5s.pt to yolov5s.pt...\n",
-      "100%|██████████| 14.1M/14.1M [00:10<00:00, 1.41MB/s]\n",
-      "\n",
       "Fusing layers... \n",
       "YOLOv5s summary: 213 layers, 7225885 parameters, 0 gradients, 16.4 GFLOPs\n",
       "Adding AutoShape... \n"
@@ -96,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,20 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Group detections by class\n",
     "class_counts = {}\n",
     "for detection in detections:\n",
-    "    class_name = detection['class']\n",
+    "    class_name = detection['class_name']\n",
     "    class_counts[class_name] = class_counts.get(class_name, 0) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +256,7 @@
     "print(\"\\nExample detections:\")\n",
     "for detection in detections[:5]:  # Show first 5 detections\n",
     "    print(f\"Image: {os.path.basename(detection['image_path'])}\")\n",
-    "    print(f\"Class: {detection['class']}\")\n",
+    "    print(f\"Class: {detection['class_name']}\")\n",
     "    print(f\"Confidence: {detection['confidence']:.2f}\")\n",
     "    print(f\"Bounding Box: {detection['bbox']}\")\n",
     "    print()"
